remove unnecessary material

--- a/notebooks/04.Training_and_Testing_Data.ipynb
+++ b/notebooks/04.Training_and_Testing_Data.ipynb
@@ -56,9 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y"
@@ -74,9 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -109,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('All:', np.bincount(y) / float(len(y)) * 100.0)\n",
@@ -129,9 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_X, test_X, train_y, test_y = train_test_split(X, y, \n",
@@ -164,9 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "classifier.fit(train_X, train_y)\n",
@@ -186,9 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('Samples correctly classified:')\n",
@@ -201,31 +189,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Plot two dimensions\n",
-    "\n",
-    "colors = [\"darkblue\", \"darkgreen\", \"gray\"]\n",
-    "\n",
-    "for n, color in enumerate(colors):\n",
-    "    idx = np.where(test_y == n)[0]\n",
-    "    plt.scatter(test_X[idx, 1], test_X[idx, 2], color=color, label=\"Class %s\" % str(n))\n",
-    "\n",
-    "plt.scatter(test_X[incorrect_idx, 1], test_X[incorrect_idx, 2], color=\"darkred\")\n",
-    "\n",
-    "plt.xlabel('sepal width [cm]')\n",
-    "plt.ylabel('petal length [cm]')\n",
-    "plt.legend(loc=3)\n",
-    "plt.title(\"Iris Classification results\")\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,28 +196,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "    <b>EXERCISE</b>:\n",
-    "     <ul>\n",
-    "      <li>\n",
-    "      Print the true labels of 3 wrong predictions and modify the scatterplot code, which we used above, to visualize and distinguish these three samples with different markers in the 2D scatterplot. Can you explain why our classifier made these wrong predictions?\n",
-    "      </li>\n",
-    "    </ul>\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# %load solutions/04_wrong-predictions.py"
+    "for i in incorrect_idx:\n",
+    "    print('%d: Predicted %d True label %d' % (i, pred_y[i], test_y[i]))\n",
+    "\n",
+    "# Plot two dimensions\n",
+    "\n",
+    "colors = [\"darkblue\", \"darkgreen\", \"gray\"]\n",
+    "\n",
+    "for n, color in enumerate(colors):\n",
+    "    idx = np.where(test_y == n)[0]\n",
+    "    plt.scatter(test_X[idx, 1], test_X[idx, 2],\n",
+    "                color=color, label=\"Class %s\" % str(n))\n",
+    "\n",
+    "for i, marker in zip(incorrect_idx, ['x', 's', 'v']):\n",
+    "    plt.scatter(test_X[i, 1], test_X[i, 2],\n",
+    "                color=\"darkred\",\n",
+    "                marker=marker,\n",
+    "                s=40,\n",
+    "                label=i)\n",
+    "\n",
+    "plt.xlabel('sepal width [cm]')\n",
+    "plt.ylabel('petal length [cm]')\n",
+    "plt.legend(loc=1, scatterpoints=1)\n",
+    "plt.title(\"Iris Classification results\")\n",
+    "plt.show()\n"
    ]
   }
  ],
