--- a/notebooks/06.Supervised_Learning-Regression.ipynb
+++ b/notebooks/06.Supervised_Learning-Regression.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rng = np.random.RandomState(42)\n",
@@ -216,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_pred_test = regressor.predict(X_test)"
@@ -253,26 +257,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "    <b>EXERCISE</b>:\n",
-    "     <ul>\n",
-    "      <li>\n",
-    "      Add a feature containing  `sin(4x)` to `X` and redo the fit. Visualize the predictions with this new richer, yet linear, model.\n",
-    "      </li>\n",
-    "    </ul>\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load solutions/06B_lin_with_sine.py"
+    "XX_train = np.concatenate((X_train, np.sin(4 * X_train)), axis=1)\n",
+    "XX_test = np.concatenate((X_test, np.sin(4 * X_test)), axis=1)\n",
+    "regressor.fit(XX_train, y_train)\n",
+    "y_pred_test_sine = regressor.predict(XX_test)\n",
+    "\n",
+    "plt.plot(X_test, y_test, 'o', label=\"data\")\n",
+    "plt.plot(X_test, y_pred_test_sine, 'o', label=\"prediction with sine\")\n",
+    "plt.plot(X_test, y_pred_test, label='prediction without sine')\n",
+    "plt.legend(loc='best');\n"
    ]
   },
   {
@@ -358,31 +356,6 @@
    "source": [
     "Much better than before! Here, the linear model was not a good fit for our problem; it was lacking in complexity and thus under-fit our data."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "    <b>EXERCISE</b>:\n",
-    "     <ul>\n",
-    "      <li>\n",
-    "      Compare the KNeighborsRegressor and LinearRegression on the boston housing dataset. You can load the dataset using ``sklearn.datasets.load_boston``. You can learn about the dataset by reading the ``DESCR`` attribute.\n",
-    "      </li>\n",
-    "    </ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# %load solutions/06A_knn_vs_linreg.py"
-   ]
   }
  ],
  "metadata": {
@@ -402,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
