--- a/notebooks/10.Case_Study-Titanic_Survival.ipynb
+++ b/notebooks/10.Case_Study-Titanic_Survival.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
@@ -150,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
@@ -162,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vec.fit_transform(measurements).toarray()"
@@ -171,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vec.get_feature_names()"
@@ -216,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -258,7 +268,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "titanic.head()"
@@ -286,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "features.head()"
@@ -303,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pd.get_dummies(features).head()"
@@ -319,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "features_dummies = pd.get_dummies(features, columns=['pclass', 'sex', 'embarked'])\n",
@@ -340,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -378,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.isnan(train_data_finite).any()"
@@ -387,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.dummy import DummyClassifier\n",
@@ -421,14 +446,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# %load solutions/10_titanic.py"
+    "# %load solutions/10_titanic.py\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "lr = LogisticRegression().fit(train_data_finite, train_labels)\n",
+    "print(\"logistic regression score: %f\" % lr.score(test_data_finite, test_labels))\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf = RandomForestClassifier(n_estimators=500, random_state=0).fit(train_data_finite, train_labels)\n",
+    "print(\"random forest score: %f\" % rf.score(test_data_finite, test_labels))\n",
+    "\n",
+    "features_dummies_sub = pd.get_dummies(features[['pclass', 'sex', 'age', 'sibsp', 'fare']])\n",
+    "data_sub = features_dummies_sub.values\n",
+    "\n",
+    "train_data_sub, test_data_sub, train_labels, test_labels = train_test_split(data_sub, labels, random_state=0)\n",
+    "\n",
+    "imp = Imputer()\n",
+    "imp.fit(train_data_sub)\n",
+    "train_data_finite_sub = imp.transform(train_data_sub)\n",
+    "test_data_finite_sub = imp.transform(test_data_sub)\n",
+    "                                         \n",
+    "lr = LogisticRegression().fit(train_data_finite_sub, train_labels)\n",
+    "print(\"logistic regression score w/o embark, parch: %f\" % lr.score(test_data_finite_sub, test_labels))\n",
+    "rf = RandomForestClassifier(n_estimators=500, random_state=0).fit(train_data_finite_sub, train_labels)\n",
+    "print(\"random forest score w/o embark, parch: %f\" % rf.score(test_data_finite_sub, test_labels))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
