--- a/notebooks/11.Text_Feature_Extraction.ipynb
+++ b/notebooks/11.Text_Feature_Extraction.ipynb
@@ -66,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(X)"
@@ -75,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -87,7 +91,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vectorizer.vocabulary_"
@@ -107,7 +113,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_bag_of_words.shape"
@@ -116,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_bag_of_words"
@@ -125,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_bag_of_words.toarray()"
@@ -134,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vectorizer.get_feature_names()"
@@ -143,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vectorizer.inverse_transform(X_bag_of_words)"
@@ -162,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -174,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -215,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# look at sequences of tokens of minimum length 2 and maximum length 2\n",
@@ -226,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bigram_vectorizer.get_feature_names()"
@@ -235,7 +259,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bigram_vectorizer.transform(X).toarray()"
@@ -251,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gram_vectorizer = CountVectorizer(ngram_range=(1, 2))\n",
@@ -261,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gram_vectorizer.get_feature_names()"
@@ -270,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gram_vectorizer.transform(X).toarray()"
@@ -292,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X"
@@ -301,7 +335,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "char_vectorizer = CountVectorizer(ngram_range=(2, 2), analyzer=\"char\")\n",
@@ -312,72 +348,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "print(char_vectorizer.get_feature_names())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "    <b>EXERCISE</b>:\n",
-    "     <ul>\n",
-    "      <li>\n",
-    "      Compute the bigrams from \"zen of python\" as given below (or by ``import this``), and find the most common trigram.\n",
-    "We want to treat each line as a separate document. You can achieve this by splitting the string by newlines (``\\n``).\n",
-    "Compute the Tf-idf encoding of the data. Which words have the highest tf-idf score? Why?\n",
-    "What changes if you use ``TfidfVectorizer(norm=\"none\")``?\n",
-    "      </li>\n",
-    "    </ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "zen = \"\"\"Beautiful is better than ugly.\n",
-    "Explicit is better than implicit.\n",
-    "Simple is better than complex.\n",
-    "Complex is better than complicated.\n",
-    "Flat is better than nested.\n",
-    "Sparse is better than dense.\n",
-    "Readability counts.\n",
-    "Special cases aren't special enough to break the rules.\n",
-    "Although practicality beats purity.\n",
-    "Errors should never pass silently.\n",
-    "Unless explicitly silenced.\n",
-    "In the face of ambiguity, refuse the temptation to guess.\n",
-    "There should be one-- and preferably only one --obvious way to do it.\n",
-    "Although that way may not be obvious at first unless you're Dutch.\n",
-    "Now is better than never.\n",
-    "Although never is often better than *right* now.\n",
-    "If the implementation is hard to explain, it's a bad idea.\n",
-    "If the implementation is easy to explain, it may be a good idea.\n",
-    "Namespaces are one honking great idea -- let's do more of those!\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# %load solutions/11_ngrams.py"
    ]
   }
  ],
