--- a/notebooks/03.Data_Representation_for_Machine_Learning.ipynb
+++ b/notebooks/03.Data_Representation_for_Machine_Learning.ipynb
@@ -283,130 +283,8 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_index = 3\n",
-    "colors = ['blue', 'red', 'green']\n",
-    "\n",
-    "for label, color in zip(range(len(iris.target_names)), colors):\n",
-    "    plt.hist(iris.data[iris.target==label, x_index], \n",
-    "             label=iris.target_names[label],\n",
-    "             color=color)\n",
-    "\n",
-    "plt.xlabel(iris.feature_names[x_index])\n",
-    "plt.legend(loc='upper right')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_index = 3\n",
-    "y_index = 0\n",
-    "\n",
-    "colors = ['blue', 'red', 'green']\n",
-    "\n",
-    "for label, color in zip(range(len(iris.target_names)), colors):\n",
-    "    plt.scatter(iris.data[iris.target==label, x_index], \n",
-    "                iris.data[iris.target==label, y_index],\n",
-    "                label=iris.target_names[label],\n",
-    "                c=color)\n",
-    "\n",
-    "plt.xlabel(iris.feature_names[x_index])\n",
-    "plt.ylabel(iris.feature_names[y_index])\n",
-    "plt.legend(loc='upper left')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "    <b>EXERCISE</b>:\n",
-    "     <ul>\n",
-    "      <li>\n",
-    "      **Change** `x_index` **and** `y_index` **in the above script\n",
-    "and find a combination of two parameters\n",
-    "which maximally separate the three classes.**\n",
-    "      </li>\n",
-    "      <li>\n",
-    "      This exercise is a preview of **dimensionality reduction**, which we'll see later.\n",
-    "      </li>\n",
-    "    </ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### An aside: scatterplot matrices\n",
-    "\n",
-    "Instead of looking at the data one plot at a time, a common tool that analysts use is called the **scatterplot matrix**.\n",
-    "\n",
-    "Scatterplot matrices show scatter plots between all features in the data set, as well as histograms to show the distribution of each feature."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "    \n",
-    "iris_df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
-    "pd.plotting.scatter_matrix(iris_df, c=iris.target, figsize=(8, 8));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Other Available Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Scikit-learn makes available a host of datasets for testing learning algorithms](http://scikit-learn.org/stable/datasets/#dataset-loading-utilities).\n",
-    "They come in three flavors:\n",
-    "\n",
-    "- **Packaged Data:** these small datasets are packaged with the scikit-learn installation,\n",
-    "  and can be downloaded using the tools in ``sklearn.datasets.load_*``\n",
-    "- **Downloadable Data:** these larger datasets are available for download, and scikit-learn\n",
-    "  includes tools which streamline this process.  These tools can be found in\n",
-    "  ``sklearn.datasets.fetch_*``\n",
-    "- **Generated Data:** there are several datasets which are generated from models based on a\n",
-    "  random seed.  These are available in the ``sklearn.datasets.make_*``\n",
-    "\n",
-    "You can explore the available dataset loaders, fetchers, and generators using IPython's\n",
-    "tab-completion functionality.  After importing the ``datasets`` submodule from ``sklearn``,\n",
-    "type\n",
-    "\n",
-    "    datasets.load_<TAB>\n",
-    "\n",
-    "or\n",
-    "\n",
-    "    datasets.fetch_<TAB>\n",
-    "\n",
-    "or\n",
-    "\n",
-    "    datasets.make_<TAB>\n",
-    "\n",
-    "to see a list of available functions."
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -417,20 +295,19 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn import datasets"
+    "import pandas as pd\n",
+    "    \n",
+    "iris_df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "iris_df['target'] = iris.target"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Be warned: many of these datasets are quite large, and can take a long time to download!\n",
-    "\n",
-    "If you start a download within the IPython notebook\n",
-    "and you want to kill it, you can use ipython's \"kernel interrupt\" feature, available in the menu or using\n",
-    "the shortcut ``Ctrl-m i``.\n",
-    "\n",
-    "You can press ``Ctrl-m h`` for a list of all ``ipython`` keyboard shortcuts."
+    "sns.pairplot(iris_df,hue='target');"
    ]
   },
   {
@@ -464,9 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "digits.keys()"
@@ -475,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n_samples, n_features = digits.data.shape\n",
@@ -487,9 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(digits.data[0])\n",
@@ -515,9 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(digits.data.shape)\n",
@@ -534,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -554,9 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set up the figure\n",
@@ -581,75 +446,6 @@
     "\n",
     "Even though each sample has data that is inherently two-dimensional, the data matrix flattens\n",
     "this 2D data into a **single vector**, which can be contained in one **row** of the data matrix."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "    <b>EXERCISE: working with the faces dataset</b>:\n",
-    "     <ul>\n",
-    "      <li>\n",
-    "      Here we'll take a moment for you to explore the datasets yourself.\n",
-    "Later on we'll be using the Olivetti faces dataset.\n",
-    "Take a moment to fetch the data (about 1.4MB), and visualize the faces.\n",
-    "You can copy the code used to visualize the digits above, and modify it for this data.\n",
-    "      </li>\n",
-    "    </ul>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.datasets import fetch_olivetti_faces"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# fetch the faces data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Use a script like above to plot the faces image data.\n",
-    "# hint: plt.cm.bone is a good colormap for this data\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Solution:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# %load solutions/03A_faces_plot.py"
    ]
   }
  ],
